--- a/src/Css/Hero.css
+++ b/src/Css/Hero.css
@@ -96,4 +96,8 @@
     .hero-right {
         width: 100%;
     }
+    .social-icons {
+       justify-content: center;
+       align-items: center;
+    }
 }
