--- a/src/Css/Footer.css
+++ b/src/Css/Footer.css
@@ -22,7 +22,13 @@
   margin-bottom: 2rem;
   text-align: center;
   color: var(--accent);
-  text-shadow: 0 2px 8px var(--accent);
+
+
+  background: var(--text-glow);
+  background-size: 300% 300%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: text-glow-move 10s linear infinite;
 }
 
 .contact-form {
@@ -37,7 +43,7 @@
 }
 
 .form-group label {
-  font-size: 1rem;
+  font-size: clamp(0.8rem, 2vw, 1.2rem);
   margin-bottom: 0.5rem;
   color: var(--text-light);
 }
@@ -46,7 +52,10 @@
 .form-group textarea {
   padding: 0.75rem 1rem;
   border-radius: 2px;
-  border: 1px solid var(--border-1);
+  border: none;
+  border-bottom: 2px solid var(--border-2);
+  border-left: 2px solid var(--border-2);
+  outline: none;
   background-color: rgba(255, 255, 255, 0.05);
   color: var(--text-h1);
   font-size: 0.95rem;
@@ -60,15 +69,16 @@
   border-color: var(--accent);
   box-shadow: 0 0 10px var(--accent);
 }
+
 .form-group input::placeholder,
 .form-group textarea::placeholder {
-  font-family: "Geo",serif;
+  font-family: "Geo", serif;
   color: var(--text-light);
   opacity: 0.8;
 }
 
 .send-btn {
-  font-family: "Geo",serif;
+  font-family: "Geo", serif;
   align-self: flex-start;
   padding: 0.9rem 1.8rem;
   font-size: 1rem;
