--- a/src/Css/Project.css
+++ b/src/Css/Project.css
@@ -130,6 +130,7 @@
     display: flex;
     flex-wrap: wrap;
     gap: 0.5rem;
+    margin-top: clamp(0.8rem, 2vw, 2rem);
 }
 
 .tech-tag {
@@ -180,6 +181,10 @@
         -webkit-text-fill-color: transparent;
         animation: text-glow-move 10s linear infinite;
     }
+    .tech-tag {
+       
+       
+        margin: .4rem 0.25rem;}
 
     .project-right {
         flex: none;
