Update with env setup

--- a/src/Css/About.css
+++ b/src/Css/About.css
@@ -111,7 +111,7 @@
     }
   
     .about-strip {
-      position: sticky;
+      position: static;
       max-width: 100%;
       width: 100%;
       text-align: center;
