Update with env setup

--- a/src/Css/About.css
+++ b/src/Css/About.css
@@ -5,6 +5,7 @@
     margin: 0 auto;
     background-color: var(--bg-container);
     box-shadow: var(--shadow-2);
+    position: relative;
   }
   
   .about-strip {
