--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@ body {
     flex-direction: column;
     color: var(--text-p);
     transition: background-color 0.3s ease, color 0.3s ease;
+    position: relative;
+  
 }
 
 /* ========================================
@@ -69,8 +71,4 @@ strong {
     font-size: clamp(1.1rem, 2vw, 1.5rem);
     font-weight: bold;
     text-transform: capitalize;
-}
-
-a {
-    cursor: pointer  !important;
 }
