Update with env setup

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,7 @@
 
   
     --cursor-outline: #18032d;
+    --cursor-outline: #1d0139;
     --cursor-dot: #270c3c;
    
 
@@ -174,6 +175,7 @@
 
   
     --cursor-outline: #86b4a6;
+    --cursor-outline-1: #5bb99d;
     --cursor-dot: #4e6b62;
   }
   
