--- a/src/Css/Customcursor.css
+++ b/src/Css/Customcursor.css
@@ -98,10 +98,10 @@
     transform: scale(0);
     animation: rippleScale 0.6s ease-out;
     box-shadow:
-      0 0 4px var(--cursor-outline),
-      0 0 10px var(--cursor-outline),
-      0 0 16px var(--cursor-outline);
-    mix-blend-mode: lighten;
+      0  14px var(--cursor-outline-1),
+      0  30px var(--cursor-outline-1),
+      0  36px var(--cursor-outline-1);
+    mix-blend-mode: var(--cursor-outline-1);
   }
   
   @keyframes rippleScale {
